--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "format": "prettier --write --cache .",
     "lint": "eslint --cache .",
     "build": "pnpm -r --filter='./packages/*' run build",
+    "build:shared": "pnpm -r --filter='./packages/shared' run build",
+    "ci-publish": "tsx scripts/publishCI.ts",
     "dev": "pnpm -r --parallel --filter='./packages/*' run dev"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.14.2",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.2.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -32,6 +33,8 @@
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.16.0",
+    "execa": "^7.1.1",
+    "minimist": "^1.2.8",
     "picocolors": "^1.0.0",
     "pnpm": "^7.21.0",
     "prettier": "^2.3.2",
