--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Publish package
         run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          npm config set //registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
           pnpm run ci-publish ${{ github.ref_name }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
